# pybind11_slow_clang

./: .bazelrc  MODULE.bazel  README.md
example/: BUILD.bazel  basic.cpp  basic_test.py  clang_time_trace.bzl
